--- a/simplex/templates/footer.html
+++ b/simplex/templates/footer.html
@@ -1,6 +1,7 @@
   <div class="w3-xlarge w3-padding-32">
    <a href="#" class="w3-hover-text-indigo"><i class="fa fa-facebook-official"></i></a>
-   <a href="https://github.com/jerza1" class="w3-hover-text-red"><i class="fa fa-github"></i></a>
+   <a href="https://www.github.com/jerza1" class="w3-hover-text-red"><i class="fa fa-github"></i></a>
    <a href="#" class="w3-hover-text-light-blue"><i class="fa fa-twitter"></i></a>
  </div>
  <p>Universidad Tecnológica de la Mixteca <br> Bautista Reyes Francisco Jerzain <br> 2017-2018 <br> Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+
